# monster-mash-chatroom

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  llms.txt  main.py  panic.sh  pyproject.toml  run.sh  setup.sh
docs/: CONFIGURATION.md
src/monster_mash_chatroom/: __init__.py  agent_runner.py  app.py  config.py  events.py  llm.py  models.py
src/monster_mash_chatroom/personas/: __init__.py  base.py  ghost.py  vampire.py  werewolf.py  witch.py  zombie.py
src/monster_mash_chatroom/templates/: index.html  style.css
tests/: test_events.py  test_llm.py  test_personas.py
