[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monster-mash-chatroom"
version = "0.1.0"
description = "Monster Mash Chatroom – A spooky FastAPI chat where AI monsters join the conversation"
authors = [{ name = "Monster Mash Chatroom Maintainers" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "fastapi",
  "streaming",
  "event-driven",
  "kafka",
  "llm",
  "halloween",
  "demo"
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "fastapi>=0.109,<0.112",
  "uvicorn[standard]>=0.24,<0.30",
  "aiokafka>=0.10,<0.12",
  "pydantic>=2.5,<3",
  "pydantic-settings>=2.0,<3",
  "python-dotenv>=1.0,<2",
  "httpx>=0.25,<0.28",
  "litellm>=1.35,<2",
  "rich>=13.5,<14"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-asyncio>=0.21,<0.25",
  "ruff>=0.6,<0.7"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
  "monster_mash_chatroom",
  "monster_mash_chatroom.personas"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
ignore = []
